
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the XXX IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
central_node_ioc-R1-3-0-eic (EIC branch):
 * Build against central_node_engine-1-5-0-eic (branch)
 * Addition of $(IOC):LINAC_TM_PC containing PC sent to timing

central_node_ioc-R1-2-12:
 * Build against central_node_engine-R1-4-1.

central_node_ioc-R1-2-11:
 * Build against central_node_engine-R1-4-0.

central_node_ioc-R1-2-10:
 * Addition of $(IOC):DISABLE_BEAM PV: this allows operators to
   disable the gun shutter.

central_node_ioc-R1-2-9:
 * Build against central_node_engine-R1-3-1. MPS is not enabled
   after configuration is loaded the first time.

central_node_ioc-R1-2-8:
 * Build against central_node_engine-R1-3-0
 * Addition of PV to clear beam fault violations [$(IOC):BEAM_FAULT_CLEAR]

central_node_ioc-R1-2-7:
 * Addition of support for FaultState PVs
 * st.cmd now loads the file fault_states.db (for FaultState PVs)
 * Version compatible with mps_config-2018-09-10-a, earlier
   mps_config versions don't have the fault_states.db file

central_node_ioc-R1-2-6:
 * Version built against central_node_engine-R1-2-4, minor fix
   to the beam charge verification table readback ('mps show fw'
   command) 

central_node_ioc-R1-2-5:
 * Version built against central_node_engine-R1-2-3, the only 
   difference to previous version is that the beam charge table
   is now populated with values from the configuration database
   (as opposed to hardcoded test numbers).

central_node_ioc-R1-2-4:
 * Add PVs to control and readback the status of the timing core.
 * Rename IOC directory to sioc-sys2-mp01.
 * Update Central Node FPGA IP address to 10.0.0.102.
 * Give executable permission to st.cmd.
 * Update PHYSICS_TOP path used in PROD.