@@ -92,6 +92,7 @@
 #define MPS_FW_MONITOR_NOT_READY_COUNTER_STRING    "MPS_FW_MONITOR_NOT_READY_COUNTER"
 #define MPS_SKIP_HEARTBEAT_STRING                  "MPS_SKIP_HEARTBEAT"
 #define MPS_FORCE_LINAC_PC0_STRING                 "MPS_FORCE_LINAC_PC0"
+#define MPS_FORCE_AOM_PC0_STRING                   "MPS_FORCE_AOM_PC0"
 
 #define TEST_DEVICE_INPUT_STRING               "TEST_DEVICE_INPUT"
 #define TEST_ANALOG_DEVICE_STRING              "TEST_ANALOG_DEVICE"
@@ -211,6 +212,7 @@ public:
   int _mpsFwMonitorNotReadyCounterParam;
   int _mpsSkipHeartbeatParam;
   int _mpsForceLinacPc0Param;
+  int _mpsForceAomPc0Param;
   
   int _testDeviceInputParam;
   int _testAnalogDeviceParam;
